name:                layer
version:             0.1.0.0
synopsis:            Combinators for building a pure update function out of elementary parts.
-- description:         
homepage:            https://github.com/asivitz/layer
license:             MIT
license-file:        LICENSE
author:              Axis Sivitz
maintainer:          aosivitz@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Layer
  -- other-modules:       
  other-extensions:    Rank2Types
  build-depends:       base >=4.7
  -- hs-source-dirs:      
  default-language:    Haskell2010
